fix: dark mode improvements

--- a/apps/frontend/src/root.css
+++ b/apps/frontend/src/root.css
@@ -4,6 +4,7 @@
   --black: rgba(0, 0, 0, 0.9);
   --black-light: rgba(0, 0, 0, 0.75);
   --black-dark: rgb(0, 0, 0);
+  --black-alt: rgb(18, 18, 18);
   --red: rgb(220, 20, 49);
   --red-raw: 220, 20, 49;
   --red-light: rgba(220, 20, 49, 0.75);
